# ReuleauxPolyhedra

./: .clang-format  .gitignore  BuildBipartite.cpp  BuildBipartite.hpp  CMakeLists.txt  CSPSolver.cpp  CSPSolver.hpp  CSPSolvermain.cpp  DifferentialEvolution.hpp  Embedding.cpp  Embedding.hpp  Graph.hpp  IntegerInterval.hpp  LICENSE  Point.cpp  Point.hpp  Point3d.hpp  PointUtility.hpp  README.md  ReadFile.hpp  clang-tidy-helper.sh  create_all.sh  create_embeddings.sh  create_scads.sh  filter_selfdual.sh  main.cpp  to_scad_format.cpp  to_stl_format.cpp  utility.hpp
Data/: aembeddings14_0.txt  aembeddings14_1.txt  aembeddings14_10.txt  aembeddings14_11.txt  aembeddings14_12.txt  aembeddings14_13.txt  aembeddings14_14.txt  aembeddings14_15.txt  aembeddings14_16.txt  aembeddings14_17.txt  aembeddings14_18.txt  aembeddings14_19.txt  aembeddings14_2.txt  aembeddings14_20.txt  aembeddings14_21.txt  aembeddings14_22.txt  aembeddings14_23.txt  aembeddings14_24.txt  aembeddings14_25.txt  aembeddings14_26.txt  aembeddings14_3.txt  aembeddings14_4.txt  aembeddings14_5.txt  aembeddings14_6.txt  aembeddings14_7.txt  aembeddings14_8.txt  aembeddings14_9.txt  bla  bla11  bla12  bla13  bla14  bla4  bla5  data04.txt  data05.txt  data06.txt  data07.txt  data08.txt  data09.txt  (+78 more)
Data/OpenSCAD/: final04_0.scad  final06_0.scad  final07_0.scad  final08_0.scad  lib.scad  (+33 more)
utils/: BipartiteGraph.hpp  DifferentialEvolution.hpp  Graph.hpp  IntegerInterval.hpp  Point.cpp  Point.hpp  Point3d.hpp  Projectors.hpp  Random.hpp  ReadFile.hpp  TimeHelpers.hpp  graveyard.cpp  pcg.hpp  tqdm.hpp  utility.hpp
